--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -5,4 +6,151 @@
 }
 body{
     background-color:  #FBDFDF;
+    position: relative;
+}
+.wrapper{
+    margin: 0 auto;
+    display: flex;
+    row-gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    max-width: 65%;
+    padding: 50px;
+}
+/* POPUP */
+.popup-wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.5 );
+}
+.popup-container{
+    position: relative;
+    padding: 30px;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #FBDFDF;
+    border-radius: 13px;
+}
+.popup-container__title{
+    margin-bottom: 20px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: #000000;
+}
+.popup-container__input{
+    margin-bottom: 15px;
+}
+.popup-container__button{
+    padding: 7px 18px;
+    background: #F4B7B7;
+    border-radius: 10px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+     color: #000000;
+     border: none;
+     cursor: pointer;
+}
+
+
+
+
+.popup-container__close{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+/*  */
+
+.planner-buttons{
+    align-self: flex-start;
+    display: flex;
+    column-gap: 41px;
+}
+.planner-buttons__button{
+    padding: 7px 18px;
+    background: #F4B7B7;
+    border-radius: 10px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+     color: #000000;
+     border: none;
+     cursor: pointer;
+}
+
+.tasks-window{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+    padding: 46px;
+    width:  100%;
+    background-color: #F2F2F2;
+    
+}
+
+.tasks-window__task{    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px 29px;
+    background: #F4B7B7;
+    border-radius: 13px;
+}
+
+.tasks-window__task-textBox{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+.task-textBox__title{
+    margin-bottom: 5px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    color: #000000;
+}
+.task-textBox__text{
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+}
+
+.tasks-window__buttons-img{
+    display: flex;
+    column-gap: 30px;
+    row-gap: 10px;
+}
+
+.buttons-img__button{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+
+
+.hidden{
+    display:none; 
 }
