--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body{
 }
 /* POPUP */
 .popup-wrapper{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -49,7 +49,10 @@ body{
     font-size: 30px;
     color: #000000;
 }
-.popup-container__input{
+.popup-container__input-taskTheme{
+    margin-bottom: 15px;
+}
+.popup-container__input-taskText{
     margin-bottom: 15px;
 }
 .popup-container__button{
@@ -109,6 +112,7 @@ body{
 
 .tasks-window__task{    
     display: flex;
+    width: 80%;
     justify-content: space-around;
     align-items: center;
     padding: 50px 29px;
