--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ body{
     font-weight: 700;
     font-size: 30px;
     color: #000000;
+    text-align: center
 }
 .popup-container__input-taskTheme{
     margin-bottom: 15px;
@@ -81,6 +82,69 @@ body{
 }
 /*  */
 
+/* POPUP editor */
+
+.popup-editor__wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.5 );
+}
+.popup-editor__container{
+    position: relative;
+    padding: 30px;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #FBDFDF;
+    border-radius: 13px;
+}
+.popup-editor__title{
+    margin-bottom: 20px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: #000000;
+    text-align: center;
+}
+.popup-editor__input-taskTheme{
+    margin-bottom: 15px;
+}
+.popup-editor__input-taskText{
+    margin-bottom: 15px;
+}
+.popup-editor__button{
+    padding: 7px 18px;
+    background: #F4B7B7;
+    border-radius: 10px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+     color: #000000;
+     border: none;
+     cursor: pointer;
+}
+
+.popup-editor__close{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+/*  */
 .planner-buttons{
     align-self: flex-start;
     display: flex;
