--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,67 @@ body{
     cursor: pointer;
 }
 
+/* POPUP VIEW */
+.popup-view__wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.5 );
+}
+.popup-view__container{
+    position: relative;
+    padding: 30px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #FBDFDF;
+    border-radius: 13px;
+}
+.popup-view__title{
+    margin-bottom: 45px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: #000000;
+    text-align: center;
+}
+.popup-view__task-title{
+    margin-bottom: 5px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    color: #000000;
+    text-align: center;
+}
+.popup-view__task-text{
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    text-align: center;
+}
+.popup-view__close{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+
+/*  */
+
 /*  */
 .planner-buttons{
     align-self: flex-start;
@@ -182,7 +243,25 @@ body{
     padding: 50px 29px;
     background: #F4B7B7;
     border-radius: 13px;
+   
 }
+@keyframes ani{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes ani2{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
 
 .tasks-window__task-textBox{
     display: flex;
